force-app/main/default/objects/Joint_Owner__c/Joint_Owner__c.object-meta.xml
<CustomObject>
    <label>Joint Owner</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Joint Owner No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Joint Owners</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>