force-app/main/default/objects/Joint_Owner__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Joint Owners</relationshipLabel>
    <relationshipName>Joint_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>