force-app/main/default/objects/Joint_Owner__c/fields/Booking_ID__c.field-meta.xml
<CustomField>
    <fullName>Booking_ID__c</fullName>
    <formula>Booking__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking ID</label>
    <type>Text</type>
</CustomField>