force-app/main/default/objects/Joint_Owner__c/fields/Booking_tCode__c.field-meta.xml
<CustomField>
    <fullName>Booking_tCode__c</fullName>
    <formula>Booking_Unit__r.Yardi_Booking_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking tCode</label>
    <type>Text</type>
</CustomField>