force-app/main/default/objects/Joint_Owner__c/fields/Booking_Unit__c.field-meta.xml
<CustomField>
    <fullName>Booking_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Unit</label>
    <referenceTo>Booking_Unit__c</referenceTo>
    <relationshipLabel>Joint Owners</relationshipLabel>
    <relationshipName>Joint_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>