force-app/main/default/objects/Joint_Owner__c/fields/Deactivated_Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_Opportunity_Link__c</fullName>
    <label>Deactivated Opportunity</label>
    <length>256</length>
    <type>Html</type>
</CustomField>