force-app/main/default/objects/Joint_Owner__c/fields/JO_Order__c.field-meta.xml
<CustomField>
    <fullName>JO_Order__c</fullName>
    <label>JO Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>