force-app/main/default/objects/Joint_Owner__c/fields/Joint_Owner_Function__c.field-meta.xml
<CustomField>
    <fullName>Joint_Owner_Function__c</fullName>
    <label>Joint Owner Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>