force-app/main/default/objects/Joint_Owner__c/fields/Joint_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Joint_Owner_Type__c</fullName>
    <label>Joint Owner Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>