force-app/main/default/objects/Joint_Owner__c/fields/Land_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Land_SF_ID__c</fullName>
    <label>Land SF ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>