force-app/main/default/objects/Joint_Owner__c/fields/Migrated_Entity__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Entity__c</fullName>
    <description>Created for Nexus migration, To capture Migrated Entity</description>
    <label>Migrated Entity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nakheel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>