force-app/main/default/objects/Joint_Owner__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <label>Owner Name</label>
    <type>TextArea</type>
</CustomField>