force-app/main/default/objects/Joint_Owner__c/fields/Ref_Tenant_Code__c.field-meta.xml
<CustomField>
    <fullName>Ref_Tenant_Code__c</fullName>
    <formula>Booking_Unit__r.Uniq_Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Tenant Code</label>
    <type>Text</type>
</CustomField>