force-app/main/default/objects/Joint_Owner__c/fields/Relationship_with_Owner__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_Owner__c</fullName>
    <description>To capture the Relationship with Owner, created for Nexus Migration</description>
    <label>Relationship with Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>