force-app/main/default/objects/Joint_Owner__c/fields/Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Code__c</fullName>
    <label>Response Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>