force-app/main/default/objects/Joint_Owner__c/fields/SendOwner__c.field-meta.xml
<CustomField>
    <fullName>SendOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendOwner</label>
    <type>Checkbox</type>
</CustomField>