force-app/main/default/objects/Joint_Owner__c/fields/Share__c.field-meta.xml
<CustomField>
    <fullName>Share__c</fullName>
    <label>Share %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>