force-app/main/default/objects/Joint_Owner__c/fields/Share_Ar__c.field-meta.xml
<CustomField>
    <fullName>Share_Ar__c</fullName>
    <description>To capture the Share % in Arabic format</description>
    <label>Share % Ar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>