force-app/main/default/objects/Joint_Owner__c/fields/Sign_Tag__c.field-meta.xml
<CustomField>
    <fullName>Sign_Tag__c</fullName>
    <label>Sign Tag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>