force-app/main/default/objects/Joint_Owner__c/fields/Tenant_Code__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Code__c</fullName>
    <label>Ext Ref Tenant Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>