force-app/main/default/objects/Joint_Owner__c/fields/Uniq__c.field-meta.xml
<CustomField>
    <fullName>Uniq__c</fullName>
    <externalId>true</externalId>
    <label>Uniq</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>