force-app/main/default/objects/Joint_Owner__c/fields/Was_Primary__c.field-meta.xml
<CustomField>
    <fullName>Was_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Primary</label>
    <type>Checkbox</type>
</CustomField>