force-app/main/default/objects/Joint_Owner__c/fields/Yardi_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Error_Message__c</fullName>
    <label>Yardi Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>